this commit made small styling changes to these pages. fixed some spacing in the navbar and on the vendor profile page

--- a/src/main/resources/static/css/client_views/liked_vendors.css
+++ b/src/main/resources/static/css/client_views/liked_vendors.css
@@ -8,7 +8,7 @@
     font-family: nunito;
 }
 
-a{
+.title-text{
     font-family: "Luxurious Roman";
     color: black;
     text-decoration: none !important;
